[package]
name = "my_blockchain"
version = "0.1.0"
edition = "2021"



[dependencies]
rand = "0.7.3"  # Используем rand с rand_core v0.6.4
rand_core = "0.5.1"  # Совместим с rand v0.8.5
sha2 = "0.10.8"  # Используем sha2 последней версии
ed25519-dalek = "1.0.1"  # Совместим с rand_core v0.6.4
log = "0.4.25"  # Логирование
env_logger = "0.9.3"  # Логирование
serde = "1.0.217"  # Сериализация
serde_json = "1.0.138"  # JSON
chrono = "0.4"
