[package]
name = "my_blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
chrono = "0.4.39"
ed25519-dalek = "1.0.1"
env_logger = "0.9.3"
log = "0.4.25"
rand = "0.7"
rand_chacha = "0.3.1"
rayon = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11.15"
serde_json = "1.0.138"
sha2 = "0.10.8"

[dev-dependencies]
reqwest = { version = "0.11", features= ["blocking", "json"] }
env_logger = "0.9"
